[tool.poetry]
name = "ats-finance"
version = "0.1.0"
description = ""
authors = ["inside <jeffersonlagoinha@gmail.com>"]
readme = "README.md"
packages = [{include = "ats_finance"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
aiohttp = "^3.8.3"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
